Añadir etiqueta <meta> con descripción

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Este es un archivo HTML que permitirá hacer pruebas con ramas en Git.">
 	<title>Ramas en Git</title>
 </head>
 <body>
