Quiero que este commit se vea en su propia rama

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<title>Ramas en Git</title>
 </head>
 <body>
-	
+	<main>
+		<h1>Ramas en Git</h1>
+		<p>Experimentando con ramas en Git. Creación, fusionado, push y borrado entre otras.</p>
+	</main>
 </body>
 </html>
