--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<main>
 		<h1>Ramas en Git</h1>
 		<p>Experimentando con ramas en Git. Creación, fusionado, push y borrado entre otras.</p>
+		<p>Me gusta el azul</p>
 	</main>
 </body>
 </html>
